Simple project to test compilation.